--- a/src/app/home/projects/projects-thumbs-list/projects-thumbs-list.component.html
+++ b/src/app/home/projects/projects-thumbs-list/projects-thumbs-list.component.html
@@ -1,13 +1,13 @@
 <section>
-  <div class="gallery">
+  <div id="project-list" class="gallery">
     <div *ngFor="let project of projects | async" class="gallery-item col-lg-3 col-sm-4 col-xs-6">
       <div class="gallery-item-overlay"></div>
-      <img [src]="project.featured_image" alt="">
+      <img class="project-image" [src]="project.featured_image" alt="">
       <div class="overlay">
         <h1><a href="https://www.q-free.com/solution/traffic-management-centre"  target="_blank">{{ project.title.rendered }}</a></h1>
-        <h3>{{ project.categories[0].name }}</h3>
+        <h3>{{ project.categories[0] }}</h3>
         <div class="more">
-          <span class="glyphicon glyphicon-search"></span>	
+          <span [routerLink]="['/project', project.slug]" class="glyphicon glyphicon-search"></span>	
         </div>
       </div>	
     </div>
