--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
 	<app-header></app-header>
 	<section class="intro">
 		<div class="header-image"></div>
-		<div class="position">
+		<div [@flyInOut]="'in'" class="position">
 			<img src="/assets/img/pmould-caricature.png" alt="">
 			<h2>Paul A. Mould</h2>
 			<h1>Front-End Developer</h1>
