--- a/src/app/home/projects/project/project.component.html
+++ b/src/app/home/projects/project/project.component.html
@@ -7,9 +7,9 @@
         <div id="carousel-project" class="carousel slide" data-ride="carousel">
           <!-- Indicators -->
           <ol class="carousel-indicators">
-            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            <li *ngFor="let slide of project.slideshow_images; let i = index;"
+            data-target="#carousel-example-generic"
+            data-slide-to="i-0" [class.active]="i==1"></li>
           </ol>
 
           <!-- Wrapper for slides -->
