--- a/src/app/home/projects/projects-thumbs-list/projects-thumbs-list.component.html
+++ b/src/app/home/projects/projects-thumbs-list/projects-thumbs-list.component.html
@@ -4,10 +4,10 @@
       <div class="gallery-item-overlay"></div>
       <img class="project-image" [src]="project.featured_image" alt="">
       <div class="overlay">
-        <h1><a href="{{ project.project_url }}"  target="_blank">{{ project.title.rendered }}</a></h1>
+        <h1>{{ project.title.rendered }}</h1>
         <h3>{{ project.categories[0] }}</h3>
         <div class="more">
-          <span [routerLink]="['/project', project.slug]" class="glyphicon glyphicon-search"></span>	
+          <span [routerLink]="['/project', project.slug]" class="glyphicon glyphicon-eye-open"></span>	
         </div>
       </div>	
     </div>
