--- a/src/app/home/projects/project/project.component.html
+++ b/src/app/home/projects/project/project.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="project" id="project" class="pm-modal-container container">
   <div class="row">
-    <div class="pm-modal col-xs-10 col-xs-offset-1">
+    <div class="pm-modal col-xs-12 col-sm-10 col-sm-offset-1">
       <div class="pm-modal-content row">
         <div [@flyInOut]="'in'" class="pm-modal-close" [routerLink]="['/home']" fragment="project-list"></div>
         <div [@flyInOut]="'in'" class="col-xs-12 col-sm-7">
@@ -33,7 +33,7 @@
           </a>
         </div>
         </div>
-        <div [@flyInOutBottom]="'in'" class="col-xs-12 col-sm-5">
+        <div [@flyInOutBottom]="'in'" class="col-xs-12 col-sm-5 title-col">
           <h1 [innerHtml]="project.title.rendered"></h1>
           <hr>
           <div [innerHtml]="project.content.rendered"></div>
