--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -3,8 +3,8 @@
   <div class="row">
     <div class="col-xs-12 col-sm-4">
       <img [@flyInOut]="'in'" class="about-me-img img-responsive" [src]="aboutMeImg" alt="">
-    </div> 
-    <div [@flyInOutRight]="'in'" class="col-xs-12 col-sm-8">
+    </div>
+    <div [@flyInOutRight]="'in'" class="col-xs-12 col-sm-8 about-me-txt">
       <h1>About Me</h1>
       <hr>
       <p>
