--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -8,7 +8,7 @@
   <div [@flyInOutBottom]="'in'" class="container-wrapper">
     <div  class="container">
       <div class="row">
-        <div class="div col-xs-10 col-xs-offset-1">
+        <div class="div col-xs-12 col-sm-10 col-sm-offset-1">
         <ul class="posts-list">
           <li *ngFor="let post of posts" (click)="selectPost(post.slug)">
             <span class="date">{{ post.date | date:'dd MMM yyyy' | uppercase }}</span>
