--- a/src/app/shared/layout/header/header.component.css
+++ b/src/app/shared/layout/header/header.component.css
@@ -4,6 +4,7 @@
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background: transparent;
   border-color: transparent;
+  font-family: 'Roboto', sans-serif;
 }
 
 
