--- a/src/app/home/projects/project/project.component.css
+++ b/src/app/home/projects/project/project.component.css
@@ -7,7 +7,8 @@
   display: flex;
   align-items: center;
   left: 50%;
-  transform: translate(-50%, 0);
+	-webkit-transform: translate(-50%, 0);
+	transform: translate(-50%, 0);
 }
 .pm-modal-container > .row {
 	width: 100%;
