--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-
+ p {
+  word-wrap: break-word;
+ }
+ 
 .spinner {
   width: 100%;
   display: flex;
