--- a/src/app/shared/layout/header/header.component.html
+++ b/src/app/shared/layout/header/header.component.html
@@ -9,9 +9,10 @@
         </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
         <ul class="nav navbar-nav">
-        <li><a [routerLink]="['/about-me']">About me</a></li>
+        <li><a [routerLink]="['/about-me']">About</a></li>
         <li><a (click)="scrollDown()" [routerLink]="['/home']" fragment="project-list">Portfolio</a></li>
-        <li><a [routerLink]="['/blog']">Blog</a></li>
+        <li><a [routerLink]="['/blog']">Articles</a></li>
+        <li><a class="hire-me" [routerLink]="['/contact']">Hire Paul</a></li>
         </ul>
       </div>
     </div>
