--- a/src/app/posts/post-single/post-single.component.html
+++ b/src/app/posts/post-single/post-single.component.html
@@ -16,8 +16,10 @@
     <div class="row">
       <div class="col-xs-10 col-xs-offset-1">
         <div class="post">
-        <div >
-          <div class="content"></div>
+        <div>
+          <img *ngIf="featuredImage" class="featured-image img-responsvie" [src]="featuredImage">
+          <div class="content" highlight-js-content></div>
+          <disqus-thread *ngIf="pageIdentifier" [page-identifier]="pageIdentifier" [page-url]="pageUrl"></disqus-thread>
         </div>
         <div *ngIf="!post">
           <!--no post found-->
