Fixed class name

--- a/src/app/posts/post-single/post-single.component.html
+++ b/src/app/posts/post-single/post-single.component.html
@@ -17,7 +17,7 @@
       <div class="col-xs-10 col-xs-offset-1">
         <div class="post">
         <div>
-          <img *ngIf="featuredImage" class="featured-image img-responsvie" [src]="featuredImage">
+          <img *ngIf="featuredImage" class="featured-image img-responsive" [src]="featuredImage">
           <div class="content" highlight-js-content></div>
           <disqus-thread *ngIf="pageIdentifier" [page-identifier]="pageIdentifier" [page-url]="pageUrl"></disqus-thread>
         </div>
