--- a/src/app/shared/contact-icons-list/contact-icons-list.component.html
+++ b/src/app/shared/contact-icons-list/contact-icons-list.component.html
@@ -3,16 +3,16 @@
     <hr>
   <div class="row connect-list">
     <div class="col-xs-3 col-sm-6 col-lg-3">
-      <a href=""><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+      <a (click)="goToUrl('https://github.com/pmould')"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
     </div>
     <div class="col-xs-3 col-sm-6 col-lg-3">
-      <a href=""><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
+      <a (click)="goToUrl('https://www.facebook.com/mould.paul')"><i class="fa fa-facebook" aria-hidden="true"></i><span>Facebook</span></a>
     </div>
     <div class="col-xs-3 col-sm-6 col-lg-3">
-      <a href=""><i class="fa fa-twitter" aria-hidden="true"></i><span>Twitter</span></a>
+      <a (click)="goToUrl('https://twitter.com/p_mould')"><i class="fa fa-twitter" aria-hidden="true"></i><span>Twitter</span></a>
     </div>
     <div class="col-xs-3 col-sm-6 col-lg-3">
-      <a href=""><i class="fa fa-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
+      <a (click)="goToUrl('https://www.linkedin.com/in/paulmould')"><i class="fa fa-linkedin" aria-hidden="true"></i><span>LinkedIn</span></a>
     </div>
   </div>
 </div> 
