Added HighlightJS, Added ng2-meta

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -8,10 +8,10 @@
         <div>
           <md-input type="text" formControlName="name" placeholder="Company/Name"></md-input>
           <div class="error" [hidden]="(!contactForm.get('name').hasError('required') || (contactForm.get('name').untouched)) && (!contactForm.get('name').hasError('required') || !submittedValidate)">
-              Name is required.
+              Company/Name is required.
           </div>
-          <div class="error" [hidden]="(!contactForm.get('name').hasError('minlength') || (contactForm.get('name').untouched)) && (!contactForm.get('name').hasError('required') || !submittedValidate)">
-              Name is required (minimum 5 characters).
+          <div class="error" [hidden]="(!contactForm.get('name').hasError('minlength') || (contactForm.get('name').untouched)) && (!contactForm.get('name').hasError('minlength') || !submittedValidate)">
+              Company/Name is required (minimum 5 characters).
           </div>
         </div>
         <div>
@@ -19,14 +19,14 @@
           <div class="error" [hidden]="(!contactForm.get('email').hasError('required') || (contactForm.get('email').untouched)) && (!contactForm.get('email').hasError('required') || !submittedValidate)">
               Email is required.
           </div>
-          <div class="error" [hidden]="(!contactForm.get('email').hasError('invalidEmail') || (contactForm.get('email').untouched) || contactForm.get('email').hasError('required')) && (!contactForm.get('email').hasError('required') || !submittedValidate)">
+          <div class="error" [hidden]="(!contactForm.get('email').hasError('invalidEmail') || (contactForm.get('email').untouched)) && (!contactForm.get('email').hasError('invalidEmail') || !submittedValidate)">
               Invalid Email.
           </div>
         </div>
         <div>
           <md-textarea type="text" formControlName="message"  rows="4" placeholder="Message"></md-textarea>
           <div class="error" [hidden]="(!contactForm.get('message').hasError('required') || (contactForm.get('message').untouched)) && (!contactForm.get('message').hasError('required') || !submittedValidate)">
-              Message is required
+              Message is required.
           </div>
         </div>
         <button md-raised-button md-button class="md-raised" [disabled]="submissionSent">SEND</button>
