--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,9 @@
 			<img src="/assets/img/pmould-caricature.png" alt="">
 			<h2>Paul A. Mould</h2>
 			<h1>Front-End Developer</h1>
-			<a class="view-portfolio" (click)="scrollDown()">View Portfolio<i class="fa fa-angle-down" aria-hidden="true"></i></a>
+			<a class="view-portfolio" (click)="scrollDown()">View Portfolio
+				<md-icon fontSet="fa" fontIcon="fa-angle-down"></md-icon>
+				</a>
 		</div>
 	</section>
 	<projects-list></projects-list>
