--- a/src/app/posts/post-list/post-list.component.html
+++ b/src/app/posts/post-list/post-list.component.html
@@ -2,7 +2,8 @@
 <div class="blog-container">
   <div class="blog-header">
     <div [@flyInOut]="'in'" class="blog-title">
-      <h1 [@animateTitle]="'in'">PMOULD <span [style.fontWeight]="'normal'">Developer <div>Blog</div></span></h1>
+      <h1 [@animateTitle]="'in'">PMOULD <span [style.fontWeight]="'normal'">Developer </span></h1>
+      <h1 class="blog">Blog</h1>
     </div>
   </div>
   <div [@flyInOutBottom]="'in'" class="container-wrapper">
