--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -33,7 +33,7 @@
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
 }
-.header-image.on {
+.intro.on .header-image {
   -webkit-filter: grayscale(0%);
   filter: grayscale(0%);
 }
@@ -45,11 +45,19 @@
     display: block;
     text-align: center;
     width: 515px;
-    height: 267px;
+    height: 317px;
     overflow: hidden;
     color: white;
     background: rgba(0, 0, 0, 0.42);
-    border-radius: 3px;
+    border-radius: 50px;
+    border: 3px solid #646464;
+    border-style: double;
+    padding: 25px 0;
+}
+
+.intro.on .position {
+  border: 4px solid rgba(0, 160, 212, 1);
+  border-style: double;
 }
 
 .position img {
@@ -60,7 +68,7 @@
   padding-top: 5px;
 }
 
-.position.on img {
+.intro.on .position img {
   width: 113px;
   -webkit-filter: grayscale(0%);
   filter: grayscale(0%);
@@ -71,11 +79,20 @@
   font-size: 17px;
   color: white;
   text-decoration: none;
+  display: inline-block;
+  cursor: pointer;
 }
 
 .view-portfolio .fa-angle-down {
   display: block;
   line-height: 8px;
+  transition: transform 0.3s ease-out;
+  width: 100%;
+  height: initial;
+}
+
+.view-portfolio:hover .fa-angle-down {
+  transform: translateY(8px);
 }
 
 @media (max-width: 767px) {
