- update about me - update contact page - update contact list

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -5,7 +5,7 @@
       <img [@flyInOut]="'in'" class="about-me-img img-responsive" [src]="aboutMeImg" alt="">
     </div>
     <div [@flyInOutRight]="'in'" class="col-xs-12 col-sm-8 about-me-txt">
-      <h1>About Me</h1>
+      <h1>About Paul</h1>
       <hr>
       <p>
         Paul Mould is an innovative leader in the I.T consulting industry building software in an agile environment for both start-ups and enterprise organizations. Most notably he has worked with the healthcare start-up, EasyRx and the multinational enterprise car rental company, Enterprise Rent-A-Car. He holds a computer Science degree and a minor in Business Administration from Mercer University in Macon, GA. He has a passion for using innovative ideas and creativity to solve complex problems for today’s organizations and brands. He is also a Pan-African at heart who advocates for positive change on the continent as seen by his role as President of the African Student Association whiles attending Mercer.
