--- a/src/app/shared/contact-icons-list/contact-icons-list.component.css
+++ b/src/app/shared/contact-icons-list/contact-icons-list.component.css
@@ -27,6 +27,7 @@ h3 {
 
 .connect-list a {
   text-decoration: none;
+  cursor: pointer;
 }
 .connect-list a:hover span,.connect-list a:hover .fa {
   opacity: .8;
